# twclone

./: #mnote.txt#  *.data  .#mnote.txt  .gitignore  AUTHORS  CODE_REVIEW.v6.md  CONVERSION_ROADMAP.md  ChangeLog  Derelict battleship claim error - Claude.html  MULTI_DB_AUDIT_FINDINGS.txt  Makefile  Makefile.am  Makefile.in  PROTOCOL  PROTOCOL.ERROR.MESSAGES  PROTOCOL.md  README  README.md  REFACTORING_CHECKPOINT.txt  REFACTORING_SUMMARY.md  TAGS  TODO  aclocal.m4  ansi.h  audit_missing.py  autoconf.h  autoconf.h.in  bigbang.c  check_json.py  check_missing.sh  client  client.c  client.h  common.h  config.c  config.cache  config.data  config.h.bak  config.json  config.status  (+62 more)
.deps/: bigbang.Po  boxmuller.Po  client.Po  common.Po  config.Po  getopt.Po  hashtable.Po  maint.Po  msgqueue.Po  namegen.Po  parse.Po  planet.Po  player_interaction.Po  server.Po  serveractions.Po  shipinfo.Po  sysop_interaction.Po  test_client.Po  test_server.Po  universe.Po
DB_Docs/: AUDIT_SUMMARY_FOR_ACTION.txt  CHANGES_MANIFEST.md  DIALECT_CLEANLINESS_REPORT.md  DIALECT_CLEAN_CODING_GUIDE.md  DOCUMENTATION_INDEX.md  QUICK_REFERENCE.md  READY_FOR_TESTING.md  SESSION_2_DIALECT_FIXES.md  SQL_Dialect_Cleanliness.md
Derelict battleship claim error - Claude_files/: 1295-ac544948209a1cc7.js  1746-b1b86c0a2a2d8644.js  251bc1cd2efbb3ee.css  3402-e3d6d9410a4d47cb.js  3510-ad60e7f1425cb49b.js  433612cb6808e33f.css  4407-06782129e46f3696.js  4939-a55457a9046a7923.js  4ce542bf750cb9cf.css  59c6eb5a-f462f96428e4762f.js  6365-104ab463252d94ef.js  87c73c54-873628b075132e7a.js  9122-97b99a65a54075ce.js  9246a64ba77808ea.css  9664-15f64ddcfe3ef600.js  9666-ffc5ded8ecb62a2c.js  a.html  anchor.html  api.js  cb8e7968d6827681.css  controller-with-preconnect-e744620d2f126b92b33d6f90787de746.html  dc61ac289aa33c17.css  enforcement.html  enterprise.js  global-error-d836dea4ff8b67e8.js  isolated-segment.html  loading-35ef40afa6938422.js  login.html  lupk8zyo  m-outer-3437aaddcdf6922d623e172c2d6f9278.html  main-app-20dde825beb22250.js  recaptcha__en_gb.js  s.js  stripe.js  style.css  webpack-1b5c222b6bc8540a.js
ai_player/: AI_QA.md  analyze_bugs.py  bandit_policy.py  bug_reporter.py  config.json  config_bot_001.json  config_bot_002.json  config_bot_003.json  config_bot_004.json  config_bot_005.json  helpers.py  list_bug_dirs.py  list_unique_bugs.py  llm_client.py  main.py  parse_protocol.py  planner.py  protocol_string.txt  requirements.txt  setup_bot_equipment.sql  spawn.py  state.json  state_001.json  state_002.json  state_003.json  state_004.json  state_005.json  state_006.json  state_007.json  state_008.json  state_009.json  state_010.json  state_011.json  state_012.json  state_013.json  state_014.json  state_015.json  state_016.json  state_017.json  state_018.json  (+129 more)
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
bug_reports/: qa_log.jsonl
client/: Makefile.am  client.py  menus.json
docs/: CLUSTER_GENERATION_V2.md  DATABASE_RULES.md  DATABSE_RULES.md  ENGINE.md  EVENT_CONTRACT.md  GALACTIC_ECONOMY.md  Intra-Stack_Protocol.md  MYSQL_COMPATIBILITY_DESIGN.md  MYSQL_PORTABILITY_DESIGN.md  NAV_BOOKMARKS_AVOID.md  PGBOUNCER_DEPLOYMENT.md  POLICE_PHASE_D1_DISCOVERY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROTOCOL.md  PROTOCOL.v2.md  SYSOP_MENU.md  TLS_CONFIGURATION_GUIDE.txt  tls_implementation_summary.md
hold/: config.data  config.data.1  serveractions.c
my_tmp/: STUB_AUDIT.txt  STUB_REFACTORING_COMPLETE.md  org_server_stardock.c  refactor_plan.md  section2.c  section3.c  section4.c  server_stardock.c  sysop_v1_handover.md  tmp.c
sql/: fullschema.sql  sqlite_schema.sql
src/: #server_cmds.c#  #serveractions.c#  .#server_cmds.c  Makefile.am  ansi.h  autoconf.h  bigbang.c  bigbang_pg_main.c  boxmuller.c  boxmuller.h  client.c  client.h  common.c  common.h  common.h~  config.c  config.h  database.c  database.h  database_cmd.c  database_cmd.h  database_market.c  database_market.h  db_player_settings.c  db_player_settings.h  engine_consumer.c  engine_consumer.c.before_cocci  engine_consumer.h  engine_main.c  engine_main.h  errors.h  game_db.c  game_db.h  globals.c  globals.h  h_bank_transfer_unlocked.c  h_get_port_commodity_details.c.inc  hardware.h  hashtable.c  hashtable.h  (+96 more)
tests/: 15.04.tests.txt  2comsServer.py  admin_and_mini_robbery_setup.json  armid_mine_tests.json  bank_and_trade_tests.json  beta_tests.json  bounty_tests.json  cluster_tests.json  combat_attack_tests.json  combat_limpet_tests.json  combat_sector_entry_tests.json  corporation_tests.json  economy_npc_ferengi_tests.json  economy_planet_market_tests.json  economy_port_market_tests.json  failed_tbd.json  genesis_torpedo_tests.json  inspect_ships.json  mini_admin_setup.json  modernize_tests.py  not_covered.json  planet_tests.json  port_dock_tests.json  results.json  robbery_tests.json  seed_fedspace.sql  server_tests.py  session_tests.json  shipyard_tests.json  stardock_tests.json  (+11 more)
tests.v2/: COVERAGE.md  README_RIG.md  coverage_report.csv  db_setup_helper.py  debug_auth.json  debug_sysop.json  generate_coverage.py  json_runner.py  macros.json  rig_db.py  run_regression_full.py  run_suites.py  run_suites_all.py  run_suites_headless.py  suite_admin_sysop.json  suite_auth_and_settings.json  suite_auth_change_password.json  suite_auth_negative.json  suite_auth_session.json  suite_bank_negative.json  suite_bounty.json  suite_bucket1_remainder_auth_bounty.json  suite_bucket1_remainder_bulk_corp_fine.json  suite_bucket1_remainder_insurance_nav_news.json  suite_bucket1_remainder_planet.json  suite_bucket1_remainder_player_settings.json  suite_bucket1_remainder_ship_stock_system.json  suite_bucket1_remainder_tavern_trade.json  suite_chat_mail_news.json  suite_citadel_upgrade_lifecycle.json  suite_cluster_generation_v2_invariants.json  suite_combat_advanced.json  suite_combat_and_crime.json  suite_combat_citadel.json  suite_combat_complete.json  suite_combat_functions_validation.json  suite_combat_mines.json  suite_combat_negative.json  suite_combat_planet_genesis.json  suite_combat_planet_ops.json  (+104 more)
(+18517 files in other folders)
